# okhttp-fork

./: .appveyor.yml  .codecov.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE_OpenSSL  NOTICE  NOTICE.md  README.md  main.cpp
ci/: linux-setup.sh
cmake/: FindOHF.cmake
examples/: CMakeLists.txt  inet_address.cpp  socket.cpp  ssl_socket.cpp  udp_socket.cpp
include/: Authenticator.hpp  Cache.hpp  CacheControl.hpp  Call.hpp  Callback.hpp  Certificate.hpp  CertificatePinner.hpp  Challenge.hpp  CipherSuite.hpp  Client.hpp  Config.hpp  ConnectionPool.hpp  ConnectionSpec.hpp  Cookie.hpp  CookieJar.hpp  Dispatcher.hpp  Dns.hpp  Exception.hpp  FormBody.hpp  Handshake.hpp  Headers.hpp  HostnameVerifier.hpp  HttpURL.hpp  HttpUrl.hpp  InetAddress.hpp  Interceptor.hpp  MediaType.hpp  MultipartBody.hpp  Principal.hpp  Protocol.hpp  Proxy.hpp  ProxySelector.hpp  Request.hpp  RequestBody.hpp  Response.hpp  ResponseBody.hpp  SSLSocket.hpp  Socket.hpp  TCPSocket.hpp  TLSVersion.hpp  (+3 more)
include/ohf/: Address.hpp  Authenticator.hpp  Cache.hpp  CacheControl.hpp  Call.hpp  Callback.hpp  Certificate.hpp  CertificatePinner.hpp  Challenge.hpp  CipherSuite.hpp  Client.hpp  Config.hpp  Connection.hpp  ConnectionPool.hpp  ConnectionSpec.hpp  Cookie.hpp  CookieJar.hpp  DNS.hpp  DTLSVersion.hpp  Dispatcher.hpp  Exception.hpp  FormBody.hpp  Handshake.hpp  Headers.hpp  HostnameVerifier.hpp  HttpURL.hpp  IOStreamBuf.hpp  InetAddress.hpp  Interceptor.hpp  MediaType.hpp  MultipartBody.hpp  Principal.hpp  Protocol.hpp  Proxy.hpp  ProxySelector.hpp  RangeException.hpp  Request.hpp  RequestBody.hpp  Response.hpp  ResponseBody.hpp  (+8 more)
include/ohf/ssl/: Challenge.hpp  CipherSuite.hpp  Context.hpp  Exception.hpp  Handshake.hpp  Initializer.hpp  SSL.hpp  Socket.hpp  X509Certificate.hpp
include/ohf/tcp/: SSLServer.hpp  SSLSocket.hpp  Server.hpp  Socket.hpp
include/ohf/udp/: Socket.hpp
lib/: CacheControl.Builder.cpp  CacheControl.cpp  CipherSuite.cpp  Cookie.Builder.cpp  Cookie.cpp  CookieJar.cpp  DNS.cpp  Dispatcher.cpp  Exception.cpp  FormBody.Builder.cpp  FormBody.cpp  Handshake.cpp  Headers.Builder.cpp  Headers.Iterator.cpp  Headers.cpp  HttpURL.Builder.cpp  HttpURL.cpp  HttpUrl.cpp  InetAddress.cpp  MediaType.cpp  Multipart.Builder.cpp  Multipart.Part.cpp  MultipartBody.Builder.cpp  MultipartBody.Part.cpp  MultipartBody.cpp  RangeException.cpp  Request.Builder.cpp  Request.cpp  RequestBody.cpp  Response.Builder.cpp  Response.cpp  ResponseBody.StreamBuf.cpp  ResponseBody.cpp  SSLSocket.StreamBuf.cpp  SSLSocket.cpp  Socket.Builder.cpp  Socket.StreamBuf.cpp  Socket.cpp  SocketImpl.hpp  SocketStreamBuf.cpp  (+6 more)
lib/UNIX/: InetAddress.cpp  SSLSocket.cpp  Socket.cpp  SocketImpl.cpp  SocketImpl.hpp
lib/Win32/: InetAddress.cpp  SSLSocket.cpp  Socket.cpp  SocketImpl.cpp  SocketImpl.hpp  WSAInit.hpp  WinUtils.cpp  WinUtils.hpp
lib/ssl/: Challenge.cpp  CipherSuite.cpp  Context.cpp  Exception.cpp  Handshake.cpp  Initializer.cpp  SSL.cpp  Socket.cpp  Util.cpp  Util.hpp
lib/tcp/: SSLServer.cpp  SSLSocket.cpp  Server.Connection.cpp  Server.Iterator.cpp  Server.cpp  Socket.StreamBuf.cpp  Socket.cpp
lib/udp/: Socket.cpp
lib/util/: string.cpp  string.hpp  util.cpp  util.hpp
lib/win32/: SocketImpl.cpp  SocketImpl.hpp
licenses/: LICENSE
samples/: CMakeLists.txt  cookie.cpp  headers.cpp  http_url.cpp  inet_address.cpp  media_type.cpp  request_body.cpp  response_body.cpp  socket.cpp  ssl_socket.cpp  udp_socket.cpp
src/: Address.cpp  CacheControl.cpp  CertificatePinner.cpp  ConnectionSpec.cpp  Cookie.cpp  DNS.cpp  Exception.cpp  FormBody.Builder.cpp  FormBody.cpp  Headers.Builder.cpp  Headers.Iterator.cpp  Headers.cpp  HttpURL.Builder.cpp  HttpURL.cpp  IOStreamBuf.cpp  InetAddress.cpp  MediaType.cpp  MultipartBody.Part.cpp  MultipartBody.cpp  Proxy.Selector.cpp  Request.Builder.cpp  Request.cpp  RequestBody.cpp  Response.cpp  ResponseBody.cpp  Socket.cpp  SocketImpl.hpp  TimeUnit.cpp
src/ssl/: CipherSuite.cpp  Context.cpp  Exception.cpp  SSL.cpp  Socket.cpp  Util.hpp  X509Certificate.cpp
src/tcp/: SSLServer.cpp  SSLSocket.cpp  Server.Connection.cpp  Server.Iterator.cpp  Server.cpp  Socket.Stream.cpp  Socket.StreamBuf.cpp  Socket.cpp
src/udp/: Socket.cpp
src/unix/: SocketImpl.cpp  SocketImpl.hpp
src/util/: string.cpp  string.hpp  util.cpp  util.hpp
src/win32/: SocketImpl.cpp  SocketImpl.hpp
tests/: CMakeLists.txt  CacheControl.cpp  Cookie.cpp  Exception.cpp  FormBody.cpp  Headers.cpp  HttpURL.cpp  InetAddress.cpp  MediaType.cpp  MultipartBody.cpp  RangeException.cpp  Request.cpp  RequestBody.cpp  TimeUnit.cpp  cache_control.cpp  cache_control.hpp  cookie.cpp  cookie.hpp  exception.cpp  exception_matcher.hpp  form_body.cpp  form_body.hpp  headers.cpp  headers.hpp  http_url.cpp  http_url.hpp  inet_address.cpp  inet_address.hpp  main.cpp  media_type.cpp  media_type.hpp  multipart_body.cpp  multipart_body.hpp  request.cpp  request.hpp  request_body.cpp  request_body.hpp  tcp_socket.cpp  time_unit.cpp  time_unit.hpp  (+2 more)
tests/tcp/: Socket.cpp  socket.cpp
tests/udp/: Socket.cpp  socket.cpp
tests/util/: ExceptionCatch.hpp  TimeUnitCatch.hpp
util/: string.cpp  string.hpp  util.cpp  util.hpp
util/include/: string.hpp  util.hpp
util/lib/: string.cpp  util.cpp
